--- a/.env.development
+++ b/.env.development
@@ -21,3 +21,7 @@ REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}/1
 SENTRY_DSN=
 S3_BUCKET=
 DEVISE_SECRET_KEY=
+
+# Harvesting
+HARVEST_ACCESS_TOKEN=
+HARVEST_ACCOUNT_ID=
